--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "check:examples": "./scripts/check-examples.sh",
+    "check:examples:verbose": "./scripts/check-examples.sh --verbose"
   },
   "dependencies": {
     "@astrojs/starlight": "^0.37.1",
